--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,10 @@
     <color name="black_25">#25282B</color>
     <color name="black_52">#52575C</color>
     <color name="black_a0">#A0A4A8</color>
-    <color name="black_e8">#E8E8E8</color>
-    <color name="black_fa">#FAFAFA</color>
+    <color name="black_3e">#3E3E52</color>
+
+    <!--GREY-->
+    <color name="grey_7e">#7e7e8c</color>
+
 
 </resources>
