--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,14 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <com.example.rango.textview.RangoTextView
+        android:id="@+id/rango_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Some text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
